# flexi-shelf

./: README.md  create-3d-test.py  create-shelf.py  pyproject.toml
src/: scene.py  shelf.py
